Ignoring fake app artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 node_modules
 *.zip
+test/fake-titanium-app/build
+test/fake-titanium-app/modules
+test/fake-titanium-app/Resources/ti-mocha.js
+test/fake-titanium-app/Resources/spec.js
