--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "liferay-core-connector",
+  "guid": "b74f4463-69a6-20ae-0ef0-3033a20889de",
   "version": "0.1.0",
   "description": "A connection library for Liferay",
   "main": "index.js",
@@ -13,9 +14,16 @@
     "bluebird": "~1.0.3",
     "btoa": "~1.1.1"
   },
+  "titanium": {
+    "superagent": "ti-superagent"
+  },
   "devDependencies": {
-    "should": "~3.1.2",
+    "grunt": "~0.4.2",
+    "grunt-contrib-clean": "~0.5.0",
     "grunt-mocha-test": "~0.9.0",
-    "grunt": "~0.4.2"
+    "grunt-titanium": "~0.1.0",
+    "grunt-titaniumifier": "~0.2.3",
+    "grunt-zip": "~0.12.0",
+    "should": "~3.1.2"
   }
 }
