Test case for wrong logins
Sometimes on titanium you could re-authenticate with wrong credentials
if a connection was already established.

--- a/test/fake-titanium-app/Resources/config.js.sample
+++ b/test/fake-titanium-app/Resources/config.js.sample
@@ -6,3 +6,7 @@ exports.AUTH = {
   password: 'test'
 };
 
+exports.WRONG_AUTH = {
+  login: 'i-do-not-exists@liferay.com',
+  password: 'wrong' + Math.random()
+};
