Deeper tests with a companion plugin
The tests can be switched off in the config.js to test the connector on
a Vanilla Liferay.

--- a/test/config.js.sample
+++ b/test/config.js.sample
@@ -10,3 +10,5 @@ exports.WRONG_AUTH = {
   login: 'i-do-not-exists@liferay.com',
   password: 'wrong' + Math.random()
 };
+
+exports.TEST_COMPANION_PLUGIN = true;
