--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   "dependencies": {
     "bluebird": "~1.0.3",
     "btoa": "~1.1.1",
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-mocha-test": "~0.12.0",
+    "mocha": "~1.21.4",
     "superagent": "~0.19.0",
     "ti-superagent": "~0.6.0"
   },
@@ -31,12 +34,12 @@
     "superagent": "ti-superagent"
   },
   "devDependencies": {
-    "grunt": "~0.4.2",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-mocha-test": "~0.10.0",
     "grunt-titanium": "~0.2.2",
     "grunt-titaniumifier": "~0.2.7",
     "grunt-zip": "~0.16.0",
+    "grunt": "~0.4.2",
     "should": "~4.0.4"
   }
 }
