--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-jshint": "~0.10.0",
     "grunt-mocha-test": "~0.12.0",
     "grunt-titanium": "~0.2.2",
     "grunt-titaniumifier": "~0.2.7",
